...
    return 5;
}


- (UITableViewCell *)tableView:(UITableView *)tableView cellForRowAtIndexPath:(NSIndexPath *)indexPath {
    
    static NSString *CellIdentifier = @"Cell";
    
    UITableViewCell *cell = [tableView dequeueReusableCellWithIdentifier:CellIdentifier];
    if (cell == nil) {
        cell = [[UITableViewCell alloc] initWithStyle:UITableViewCellStyleDefault reuseIdentifier:CellIdentifier];
    }
    
...
        return;
    }
    
    THSRTimetableViewController *viewController = [[THSRTimetableViewController alloc] initWithStyle:UITableViewStylePlain];
    
    if (indexPath.row == 0){
        viewController.title = NSLocalizedString(@"Southbound Trains", nil);
        viewController.key = MMThsrSouthbound;
    } else {
        viewController.title = NSLocalizedString(@"Northbound Trains", nil);
        viewController.key = MMThsrNorthbound;
    }
    
...
