//
//  UITests.swift
//  UITests
//
//  This is the source code of wTHSR for iOS
//  It is licensed under GNU GPL v. 3.
//
//  Created by Harry Weng.
//  Copyright © 2015 MadebyWeng. All rights reserved.
//

import XCTest

class UITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
//        XCUIApplication().launch()
        
        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        snapshot("0Launch")
        let app = XCUIApplication()
        let cell = app.tables.cells.elementBoundByIndex(0)
        cell.tap()
//        app.tables.staticTexts["Southbound Trains, Taipei  -> Zuoying"].tap()
//        app.tables.cells.staticTexts["Southbound Trains, Taipei  -> Zuoying"].tap()
//        app.tables.cells.staticTexts["Southbound Trains, Taipei  -> Zuoying"].tap()
        
        snapshot("1Main")
//        app.navigationBars["Southbound Trains"].buttons["\U53f0\U7063\U9ad8\U9435\U6642\U523b\U8868"].tap()
        
////        let tableRows = XCUIApplication().tableRows
////        let firstButton = tableRows.buttons.elementAtIndex(1)
////        firstButton.tap()
//        XCUIApplication().tables.cells.staticTexts["Cell"].tap()
//
        
        
//        let tabBar = XCUIApplication().tabBars
//        let secondButton = tabBar.buttons.elementBoundByIndex(1)
//        
//        XCUIDevice().orientation = UIDeviceOrientation.LandscapeLeft
//        snapshot("1LandscapeLeft")
//        
//        secondButton.tap()
//        XCUIDevice().orientation = UIDeviceOrientation.LandscapeRight
//        snapshot("2LandscapeRight")
//        
//        secondButton.tap()
//        XCUIDevice().orientation = UIDeviceOrientation.Portrait
//        snapshot("3Portrait")
    }
    
}
